--- a/test-output/index.html
+++ b/test-output/index.html
@@ -90,7 +90,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">5 methods,   5 passed</span>
+                    <span class="method-stats">8 methods,   8 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -106,7 +106,22 @@
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="UserAPIGetTest" class="method navigator-link" hash-for-method="testWithCorrectUserId">testWithCorrectUserId</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="UserAPIGetTest" class="method navigator-link" hash-for-method="testWithCorrectUserId(5711480, Avani Kaniyar)">testWithCorrectUserId(5711480, Avani Kaniyar)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="UserAPIGetTest" class="method navigator-link" hash-for-method="testWithCorrectUserId(5713354, Siddhi Khan)">testWithCorrectUserId(5713354, Siddhi Khan)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="UserAPIGetTest" class="method navigator-link" hash-for-method="testWithCorrectUserId(5711487, Rudra Arora)">testWithCorrectUserId(5711487, Rudra Arora)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="UserAPIGetTest" class="method navigator-link" hash-for-method="testWithCorrectUserId(5711486, Chinmayanand Pillai)">testWithCorrectUserId(5711486, Chinmayanand Pillai)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -151,9 +166,34 @@
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="testWithCorrectUserId">
-                  </a> <!-- testWithCorrectUserId -->
+                  <a name="testWithCorrectUserId(5711480, Avani Kaniyar)">
+                  </a> <!-- testWithCorrectUserId(5711480, Avani Kaniyar) -->
                   <span class="method-name">testWithCorrectUserId</span>
+                  <span class="parameters">(5711480, Avani Kaniyar)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="testWithCorrectUserId(5713354, Siddhi Khan)">
+                  </a> <!-- testWithCorrectUserId(5713354, Siddhi Khan) -->
+                  <span class="method-name">testWithCorrectUserId</span>
+                  <span class="parameters">(5713354, Siddhi Khan)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="testWithCorrectUserId(5711487, Rudra Arora)">
+                  </a> <!-- testWithCorrectUserId(5711487, Rudra Arora) -->
+                  <span class="method-name">testWithCorrectUserId</span>
+                  <span class="parameters">(5711487, Rudra Arora)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="testWithCorrectUserId(5711486, Chinmayanand Pillai)">
+                  </a> <!-- testWithCorrectUserId(5711486, Chinmayanand Pillai) -->
+                  <span class="method-name">testWithCorrectUserId</span>
+                  <span class="parameters">(5711486, Chinmayanand Pillai)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
@@ -182,7 +222,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">/private/var/folders/wn/qqzs8nzn7qd73fbjm2plhlv80000gn/T/testng-eclipse-1314689870/testng-customsuite.xml</span>
+            <span class="header-content">/private/var/folders/wn/qqzs8nzn7qd73fbjm2plhlv80000gn/T/testng-eclipse--697051472/testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -231,32 +271,44 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(5);
+data.addRows(8);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'testWithBlankId')
 data.setCell(0, 2, 'UserAPIGetTest')
-data.setCell(0, 3, 581);
+data.setCell(0, 3, 1329);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'testWithCreateUser')
 data.setCell(1, 2, 'UserAPIGetTest')
-data.setCell(1, 3, 498);
+data.setCell(1, 3, 946);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'testWithNonExistingtUserId')
 data.setCell(2, 2, 'UserAPIGetTest')
-data.setCell(2, 3, 431);
+data.setCell(2, 3, 881);
 data.setCell(3, 0, 3)
 data.setCell(3, 1, 'testWithSpecialChar')
 data.setCell(3, 2, 'UserAPIGetTest')
-data.setCell(3, 3, 417);
+data.setCell(3, 3, 872);
 data.setCell(4, 0, 4)
 data.setCell(4, 1, 'testWithCorrectUserId')
 data.setCell(4, 2, 'UserAPIGetTest')
-data.setCell(4, 3, 109);
+data.setCell(4, 3, 870);
+data.setCell(5, 0, 5)
+data.setCell(5, 1, 'testWithCorrectUserId')
+data.setCell(5, 2, 'UserAPIGetTest')
+data.setCell(5, 3, 442);
+data.setCell(6, 0, 6)
+data.setCell(6, 1, 'testWithCorrectUserId')
+data.setCell(6, 2, 'UserAPIGetTest')
+data.setCell(6, 3, 426);
+data.setCell(7, 0, 7)
+data.setCell(7, 1, 'testWithCorrectUserId')
+data.setCell(7, 2, 'UserAPIGetTest')
+data.setCell(7, 3, 404);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 2 seconds</span>
+              <span class="suite-total-time">Total running time: 6 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -288,20 +340,32 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">testWithCorrectUserId</span>
-                <span class="method-start">588 ms</span>
+                <span class="method-name">testWithCorrectUserId(5711480, Avani Kaniyar)</span>
+                <span class="method-start">1345 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">testWithCorrectUserId(5713354, Siddhi Khan)</span>
+                <span class="method-start">2221 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">testWithCorrectUserId(5711487, Rudra Arora)</span>
+                <span class="method-start">2669 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">testWithCorrectUserId(5711486, Chinmayanand Pillai)</span>
+                <span class="method-start">3099 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">testWithCreateUser</span>
-                <span class="method-start">702 ms</span>
+                <span class="method-start">3506 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">testWithNonExistingtUserId</span>
-                <span class="method-start">1204 ms</span>
+                <span class="method-start">4458 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">testWithSpecialChar</span>
-                <span class="method-start">1640 ms</span>
+                <span class="method-start">5344 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
