add json parsers

--- a/test-output/index.html
+++ b/test-output/index.html
@@ -90,7 +90,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">4 methods,   4 passed</span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -101,22 +101,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="UserApachePOITests" class="method navigator-link" hash-for-method="testWithCorrectUserId(5775209, Gajabahu Varma)">testWithCorrectUserId(5775209, Gajabahu Varma)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="UserApachePOITests" class="method navigator-link" hash-for-method="testWithCorrectUserId(5775210, Gorakhanatha Nehru)">testWithCorrectUserId(5775210, Gorakhanatha Nehru)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="UserApachePOITests" class="method navigator-link" hash-for-method="testWithNonExistingtUserId(456, ba)">testWithNonExistingtUserId(456, ba)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="UserApachePOITests" class="method navigator-link" hash-for-method="testWithNonExistingtUserId(123, aa)">testWithNonExistingtUserId(123, aa)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="userAPITest.UserApiGetTest" class="method navigator-link" hash-for-method="testWithCorrectUserId">testWithCorrectUserId</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -134,39 +119,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">UserApachePOITests</span>
+              <span class="class-name">userAPITest.UserApiGetTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="testWithCorrectUserId(5775209, Gajabahu Varma)">
-                  </a> <!-- testWithCorrectUserId(5775209, Gajabahu Varma) -->
+                  <a name="testWithCorrectUserId">
+                  </a> <!-- testWithCorrectUserId -->
                   <span class="method-name">testWithCorrectUserId</span>
-                  <span class="parameters">(5775209, Gajabahu Varma)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="testWithCorrectUserId(5775210, Gorakhanatha Nehru)">
-                  </a> <!-- testWithCorrectUserId(5775210, Gorakhanatha Nehru) -->
-                  <span class="method-name">testWithCorrectUserId</span>
-                  <span class="parameters">(5775210, Gorakhanatha Nehru)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="testWithNonExistingtUserId(456, ba)">
-                  </a> <!-- testWithNonExistingtUserId(456, ba) -->
-                  <span class="method-name">testWithNonExistingtUserId</span>
-                  <span class="parameters">(456, ba)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="testWithNonExistingtUserId(123, aa)">
-                  </a> <!-- testWithNonExistingtUserId(123, aa) -->
-                  <span class="method-name">testWithNonExistingtUserId</span>
-                  <span class="parameters">(123, aa)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -174,7 +134,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">/private/var/folders/wn/qqzs8nzn7qd73fbjm2plhlv80000gn/T/testng-eclipse-1471340981/testng-customsuite.xml</span>
+            <span class="header-content">/private/var/folders/wn/qqzs8nzn7qd73fbjm2plhlv80000gn/T/testng-eclipse--21280472/testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -183,7 +143,7 @@
 &lt;suite parallel=&quot;none&quot; name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;UserApachePOITests&quot;/&gt;
+      &lt;class name=&quot;userAPITest.UserApiGetTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -223,28 +183,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(4);
+data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'testWithCorrectUserId')
-data.setCell(0, 2, 'UserApachePOITests')
-data.setCell(0, 3, 1215);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'testWithCorrectUserId')
-data.setCell(1, 2, 'UserApachePOITests')
-data.setCell(1, 3, 904);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'testWithNonExistingtUserId')
-data.setCell(2, 2, 'UserApachePOITests')
-data.setCell(2, 3, 886);
-data.setCell(3, 0, 3)
-data.setCell(3, 1, 'testWithNonExistingtUserId')
-data.setCell(3, 2, 'UserApachePOITests')
-data.setCell(3, 3, 859);
+data.setCell(0, 2, 'userAPITest.UserApiGetTest')
+data.setCell(0, 3, 1755);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 3 seconds</span>
+              <span class="suite-total-time">Total running time: 1 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -270,22 +218,10 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">UserApachePOITests</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">userAPITest.UserApiGetTest</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">testWithCorrectUserId(5775209, Gajabahu Varma)</span>
+                <span class="method-name">testWithCorrectUserId</span>
                 <span class="method-start">0 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">testWithCorrectUserId(5775210, Gorakhanatha Nehru)</span>
-                <span class="method-start">1221 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">testWithNonExistingtUserId(123, aa)</span>
-                <span class="method-start">2267 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">testWithNonExistingtUserId(456, ba)</span>
-                <span class="method-start">3171 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
