--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,12 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="76d6af">  <td>23/11/25 18:22:06</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserApachePOITests.testWithCorrectUserId(java.lang.String, java.lang.String)[pri:0, instance:UserApachePOITests@c7ba306]">testWithCorrectUserId</td> 
-  <td>main@758529971</td>   <td></td> </tr>
-<tr bgcolor="76d6af">  <td>23/11/25 18:22:07</td>   <td>1220</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserApachePOITests.testWithCorrectUserId(java.lang.String, java.lang.String)[pri:0, instance:UserApachePOITests@c7ba306]">testWithCorrectUserId</td> 
-  <td>main@758529971</td>   <td></td> </tr>
-<tr bgcolor="76d6af">  <td>23/11/25 18:22:08</td>   <td>2266</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserApachePOITests.testWithNonExistingtUserId(java.lang.String, java.lang.String)[pri:0, instance:UserApachePOITests@c7ba306]">testWithNonExistingtUserId</td> 
-  <td>main@758529971</td>   <td></td> </tr>
-<tr bgcolor="76d6af">  <td>23/11/25 18:22:09</td>   <td>3170</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserApachePOITests.testWithNonExistingtUserId(java.lang.String, java.lang.String)[pri:0, instance:UserApachePOITests@c7ba306]">testWithNonExistingtUserId</td> 
+<tr bgcolor="9db7c7">  <td>23/11/29 22:19:26</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserApiGetTest.testWithCorrectUserId()[pri:0, instance:userAPITest.UserApiGetTest@1efe439d]">testWithCorrectUserId</td> 
   <td>main@758529971</td>   <td></td> </tr>
 </table>
