--- a/test-output/index.html
+++ b/test-output/index.html
@@ -101,7 +101,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="userAPITest.UserApiPutTest" class="method navigator-link" hash-for-method="testWithUpdateUser">testWithUpdateUser</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="userAPITest.UserApiDeleteTest" class="method navigator-link" hash-for-method="testWithDeleteUser">testWithDeleteUser</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -119,14 +119,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">userAPITest.UserApiPutTest</span>
+              <span class="class-name">userAPITest.UserApiDeleteTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="testWithUpdateUser">
-                  </a> <!-- testWithUpdateUser -->
-                  <span class="method-name">testWithUpdateUser</span>
+                  <a name="testWithDeleteUser">
+                  </a> <!-- testWithDeleteUser -->
+                  <span class="method-name">testWithDeleteUser</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -134,7 +134,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">/private/var/folders/wn/qqzs8nzn7qd73fbjm2plhlv80000gn/T/testng-eclipse--1501427786/testng-customsuite.xml</span>
+            <span class="header-content">/private/var/folders/wn/qqzs8nzn7qd73fbjm2plhlv80000gn/T/testng-eclipse--2049784746/testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -143,7 +143,7 @@
 &lt;suite parallel=&quot;none&quot; name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;userAPITest.UserApiPutTest&quot;/&gt;
+      &lt;class name=&quot;userAPITest.UserApiDeleteTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -185,9 +185,9 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'testWithUpdateUser')
-data.setCell(0, 2, 'userAPITest.UserApiPutTest')
-data.setCell(0, 3, 2153);
+data.setCell(0, 1, 'testWithDeleteUser')
+data.setCell(0, 2, 'userAPITest.UserApiDeleteTest')
+data.setCell(0, 3, 2556);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
@@ -218,9 +218,9 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">userAPITest.UserApiPutTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">userAPITest.UserApiDeleteTest</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">testWithUpdateUser</span>
+                <span class="method-name">testWithDeleteUser</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
