--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,6 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9db7c7">  <td>23/12/01 20:50:29</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserApiPutTest.testWithUpdateUser()[pri:0, instance:userAPITest.UserApiPutTest@1efe439d]">testWithUpdateUser</td> 
+<tr bgcolor="9db7c7">  <td>23/12/01 21:24:35</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserApiDeleteTest.testWithDeleteUser()[pri:0, instance:userAPITest.UserApiDeleteTest@1efe439d]">testWithDeleteUser</td> 
   <td>main@758529971</td>   <td></td> </tr>
 </table>
